--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "typescript": "^5.9.3",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/ws": "^8.18.1"
   }
 }
